--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "animation.css": "^0.1.0",
         "font-awesome": "^4.7.0",
         "jalali-moment": "^3.3.10",
+        "moment-jalaali": "^0.10.0",
         "node-sass": "^9.0.0",
         "pinia": "^2.1.3",
         "sass-loader": "^13.3.2",
