--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "vue-codemirror": "^4.0.6",
         "vue-router": "^3.0.6",
         "vue3-persian-datetime-picker": "^1.2.2",
+        "vuetify-groupbox": "^1.0.1",
         "vuex": "^3.1.1",
         "webfontloader": "^1.6.28"
     },
